# BoltEngine

./: .gitattributes  .gitignore  .gitmodules  Bolt.sln  BoltEngine.sln  CMakeLists.txt  Dependencies.lua  Pending.lnk  README.md  Test.txt  hello.rml  premake5.lua
Bolt/: BoltEngine.vcxproj  BoltEngine.vcxproj.filters  CMakeLists.txt  repos.lnk
Bolt-Editor/: Bolt-Editor.vcxproj  Bolt-Editor.vcxproj.filters  CMakeLists.txt  imgui.ini  premake5.lua
Bolt-Editor/Bolt-Editor/Projects/: TestProject.json
Bolt-Editor/src/: EditorApplication.cpp  EditorUISystem.cpp  EditorUISystem.hpp  main.cpp
Bolt-Editor/src/Editor/: EditorCamera.cpp  EditorCamera.hpp  EditorComponentRegistration.cpp  EditorComponentRegistration.hpp  ExternalEditor.cpp  ExternalEditor.hpp  ExternalEditorInfo.hpp  ExternalEditorType.hpp
Bolt-Editor/src/Gui/: AssetBrowser.cpp  AssetBrowserActions.cpp  AssetType.hpp  ImGuiUtils.cpp  ImGuiUtils.hpp  PackageManagerPanel.hpp  ThumbnailCache.hpp
Bolt-Editor/src/Scripting/: ScriptComponentInspector.cpp
Bolt-Editor/src/Systems/: ImGuiEditorLayer.cpp  ImGuiEditorLayer.hpp  ImGuiEditorLayerChrome.cpp  ImGuiEditorLayerPanels.cpp  ImGuiEditorLayerViewport.cpp
Bolt-NativeScripts/: CMakeLists.txt
Bolt-NativeScripts/Source/: ExampleNativeScript.cpp  FloatingMotion.cpp  NativeScriptExports.cpp  NewNativeScript.cpp  NewNativeScript1.cpp  PatrolMovement.cpp  Spinner.cpp
Bolt-Runtime/: Bolt-Runtime.vcxproj  Bolt-Runtime.vcxproj.filters  CMakeLists.txt  imgui.ini  premake5.lua
Bolt-Runtime/Src/: Runtime.cpp  RuntimeApplication.cpp
Bolt-Runtime/src/: RuntimeApplication.cpp
Bolt/Assets/Shader/: sprite2d.frag.glsl  sprite2d.vert.glsl
Bolt/Engine/: Bolt.hpp  GameSystem.cpp  GameSystem.hpp  main.cpp  pch.hpp
Bolt/Engine/Audio/: AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp
Bolt/Engine/Collections/: Color.hpp  Ids.hpp  Vec2.hpp  Viewport.hpp
Bolt/Engine/Components/: BoxCollider2D.cpp  BoxCollider2D.hpp  Collider2D.cpp  Collider2D.hpp  ComponentUtils.hpp  MeshRenderer.hpp  ParticleSystem2D.cpp  ParticleSystem2D.hpp  Rigidbody2D.cpp  Rigidbody2D.hpp  SpriteRenderer.hpp  Tags.hpp  Transform.cpp  Transform.hpp  Transform2D.cpp  Transform2D.hpp
Bolt/Engine/Core/: Application.cpp  Application.hpp  Input.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
Bolt/Engine/Debugging/: Exceptions.hpp  Exeptions.hpp  Logger.cpp  Logger.hpp
Bolt/Engine/Graphics/: Camera.cpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  GizmoRenderer.cpp  GizmoRenderer.hpp  Gizmos.cpp  Gizmos.hpp  Mesh.cpp  Mesh.hpp  OpenGL.cpp  OpenGL.hpp  QuadMesh.cpp  QuadMesh.hpp  RenderContext.cpp  RenderContext.hpp  RenderResources.cpp  RenderResources.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  SpriteShaderProgram.cpp  Texture2D.cpp  Texture2D.hpp  TextureManager.cpp  TextureManager.hpp
Bolt/Engine/Math/: Random.cpp  Random.hpp  VectorMath.cpp  VectorMath.hpp
Bolt/Engine/Physics/: Box2DWorld.cpp  Box2DWorld.hpp  Collision2D.hpp  CollisionDispatcher.hpp  Physics2D.cpp  Physics2D.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsTypes.hpp  PhysicsUtility.cpp
Bolt/Engine/Scene/: Entity.cpp  Entity.hpp  ISystem.hpp  Scene.cpp  Scene.hpp  SceneDefinition.cpp  SceneDefinition.hpp  SceneManager.cpp  SceneManager.hpp
Bolt/Engine/Systems/: ParticleUpdateSystem.hpp
Bolt/Engine/Utils/: Event.hpp  Eventbus.Hpp  File.cpp  Timer.hpp
Bolt/Src/: Bolt.hpp  EntryPoint.hpp  pch.hpp
Bolt/Src/Audio/: Audio.cpp  AudioHandle.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp
Bolt/Src/Collections/: AABB.hpp  Color.hpp  Ids.hpp  Mat2.hpp  Quaternion.hpp  Vec2.hpp  Viewport.hpp
Bolt/Src/Components/: AudioSourceComponent.cpp  AudioSourceComponent.hpp  BoxCollider2D.cpp  BoxCollider2D.hpp  BoxCollider2DComponent.cpp  BoxCollider2DComponent.hpp  Camera2DComponent.cpp  Camera2DComponent.hpp  Collider2D.cpp  Collider2D.hpp  ComponentUtils.hpp  Components.hpp  GuiImage.hpp  Image.hpp  Name.hpp  ParticleSystem2D.cpp  ParticleSystem2D.hpp  ParticleSystem2DComponent.cpp  ParticleSystem2DComponent.hpp  RectTransform.hpp  RectTransformComponent.hpp  Rigidbody2D.cpp  Rigidbody2D.hpp  Rigidbody2DComponent.cpp  SpriteRenderer.hpp  SpriteRendererComponent.hpp  Transform2D.cpp  Transform2D.hpp  Transform2DComponent.cpp  Transform2DComponent.hpp
Bolt/Src/Components/Audio/: AudioSourceComponent.cpp  AudioSourceComponent.hpp
Bolt/Src/Core/: Application.cpp  Application.hpp  EngineContext.hpp  EntryPoint.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Memory.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp  hello.rml
Bolt/Src/Debugging/: Exceptions.hpp  Logger.cpp  Logger.hpp
Bolt/Src/Graphics/: Camera2D.cpp  Camera2D.hpp  GizmoRenderer.cpp  GizmoRenderer.hpp  Gizmos.cpp  Gizmos.hpp  Instance44.hpp  OpenGL.cpp  OpenGL.hpp  QuadMesh.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  SpriteShaderProgram.cpp  SpriteShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  TextureHandle.hpp  TextureManager.cpp  TextureManager.hpp
Bolt/Src/Gui/: GuiRenderer.cpp  GuiRenderer.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp
Bolt/Src/Math/: Random.cpp  Random.hpp  VectorMath.hpp
Bolt/Src/Physics/: Box2DWorld.cpp  CollisionDispatcher.hpp  Physics2D.cpp  Physics2D.hpp  PhysicsSystem.cpp  PhysicsSystem2D.cpp  PhysicsSystem2D.hpp  PhysicsUtility.cpp  PhysicsUtility.hpp
Bolt/Src/Scene/: ComponentRegistry.hpp  Entity.cpp  Entity.hpp  EntityHelper.cpp  EntityHelper.hpp  ISystem.hpp  Scene.cpp  Scene.hpp  SceneDefinition.cpp  SceneDefinition.hpp  SceneManager.cpp  SceneManager.hpp
Bolt/Src/Systems/: ImGuiDebugSystem.cpp  ImGuiDebugSystem.hpp  ParticleUpdateSystem.cpp  ParticleUpdateSystem.hpp
Bolt/Src/Utils/: Event.hpp  Eventbus.Hpp  File.cpp  File.hpp  Path.hpp  StringHelper.hpp  Timer.hpp
Bolt/Src/imgui/: imgui_demo.cpp  imgui_impl_glfw.cpp
Sandbox/: CMakeLists.txt  GameSystem.cpp  GameSystem.hpp  Sandbox.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/Src/: GameSystem.cpp  GameSystem.hpp  ImGuiDebugSystem.cpp  Sandbox.cpp
(+453 files in other folders)
